<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/weather_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceListItem"
        android:layout_gravity="center"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="3">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/weather_icon_description"
                android:adjustViewBounds="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/wind_pict"
                android:adjustViewBounds="true"
                android:contentDescription="@string/wind_direction_picture_descr" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/weather_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceListItem"
                android:layout_gravity="center"
                android:gravity="left|center_vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:id="@+id/night_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_night"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/morn_title"
                    android:text="@string/morning_title"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/day_title"
                    android:text="@string/day_title"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal" />

                <TextView
                    android:id="@+id/even_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/evening_title"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp">

                <TextView
                    android:id="@+id/night_temp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal" />

                <TextView
                    android:id="@+id/morn_temp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal" />

                <TextView
                    android:id="@+id/day_temp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal" />

                <TextView
                    android:id="@+id/even_temp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="4">

        <TextView
            android:id="@+id/wind_speed"
            android:layout_width="match_parent"
            android:textAppearance="?attr/textAppearanceListItem"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal" />

        <TextView
            android:id="@+id/pressure"
            android:layout_width="match_parent"
            android:textAppearance="?attr/textAppearanceListItem"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal" />

        <TextView
            android:id="@+id/humidity"
            android:layout_weight="1"
            android:textAppearance="?attr/textAppearanceListItem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal" />

        <TextView
            android:id="@+id/rainy"
            android:layout_weight="1"
            android:textAppearance="?attr/textAppearanceListItem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal" />
    </LinearLayout>

</LinearLayout>
